--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"author": "Prefinem",
 	"dependencies": {
 		"binary-case": "^1.1.4"
 	},
@@ -16,6 +17,7 @@
 		"lint-staged": "^10.0.8",
 		"prettier": "^1.19.1"
 	},
+	"homepage": "https://github.com/Prefinem/aws-lambda-server",
 	"husky": {
 		"hooks": {
 			"pre-commit": "lint-staged"
@@ -31,6 +33,7 @@
 	},
 	"main": "src/index.js",
 	"name": "aws-lambda-server",
+	"repository": "https://github.com/Prefinem/aws-lambda-server",
 	"scripts": {
 		"lint": "eslint src/*",
 		"prettify": "prettier src/* --write",
