--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Prefinem",
 	"dependencies": {
-		"binary-case": "^1.1.4"
+		"binary-case": "1.1.4"
 	},
 	"description": "Run a node webserver on AWS Lambda!",
 	"devDependencies": {
